[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Ship/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Main/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/space_shooter_pack/spaceship shooter music/spaceship shooter .ogg" type="AudioStream" id=4]
[ext_resource path="res://src/Enemies/EnnemySmall.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Enemies/EnnemyMedium.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Enemies/EnnemyBig.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Menu/Menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/HUD/HUD.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 8, -16, 0, 0, 0, 0, 248, -16 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Ship = ExtResource( 1 )
ennemies = [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 128, 274 )

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionPolygon2D" parent="Borders"]
build_mode = 1
polygon = PoolVector2Array( 0, 0, 256, 0, 256, 256, 0, 256 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="Tween" type="Tween" parent="Music"]

[node name="Menu" parent="." instance=ExtResource( 8 )]
popup_exclusive = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 9 )]
popup_exclusive = true

[node name="EnnemiesSpawn" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="EnnemiesSpawn"]
position = Vector2( 8, -16 )
rotation = 2.43185e-07

[connection signal="tween_completed" from="Music/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="start_game" from="Menu" to="." method="_on_Menu_start_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartDelay_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
